raw UI for feeds, taskers and tasks

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -19,13 +19,15 @@
   "continue": "Continue",
   "yes": "Yes",
   "no": "No",
-  "name": "Name",
   "message": "Message",
   "actions": "Actions",
   "menu": {
     "dashboard": "Dashboard",
     "detectors": "Detector List",
     "tags": "Tags",
+    "feeds": "Feeds",
+    "taskers": "Taskers",
+    "tasks": "Tasks",
     "rulesets": "Rulesets",
     "rules": "Rules",
     "rules_review": "Review Changes",
@@ -73,6 +75,47 @@
     "description": "Description",
     "name": "Name",
     "required" : "Required"
+  },
+  "feeds": {
+    "required" : "Required",
+    "add_feed": "Add Feed",
+    "edit_feed": "Edit Feed",
+    "enable": "Enable",
+    "disable": "Disable",
+    "add_tag": "Add Tag",
+    "remove_tag": "Remove Tag",
+    "saved": "Changes saved",
+    "name": "Name",
+    "friendly_name": "Friendly Name",
+    "type": "Type",
+    "location": "Location path / url",
+    "filename": "Filename",
+    "component_name": "Component name",
+    "component_type": "Component subtype",
+    "description": "Description",
+    "checksum": "Checksum"
+  },
+  "taskers": {
+    "enable": "Enable",
+    "disable": "Disable",
+    "add_tag": "Add Tag",
+    "remove_tag": "Remove Tag",
+    "interval_mm": "Interval",
+    "actions": "Actions",
+    "run_task": "Run task now",
+    "required": "Required",
+    "edit_tasker": "Edit Tasker",
+    "saved": "Saved"
+  },
+  "tasks":{
+    "name" : "Task Name",
+    "modifiedAt": "Last Modified",
+    "run_time": "Scheduled time",
+    "description": "Description",
+    "completed": "Completed",
+    "failed": "Failed",
+    "parent_name": "Tasker name",
+    "module_name": "Module Name"
   },
   "rulesets": {
     "enable_all": "Enable All",
