--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -80,12 +80,15 @@
     "required" : "Required",
     "add_feed": "Add Feed",
     "edit_feed": "Edit Feed",
+    "enabled": "Enabled",
     "enable": "Enable",
     "disable": "Disable",
     "add_tag": "Add Tag",
     "remove_tag": "Remove Tag",
     "saved": "Changes saved",
     "name": "Name",
+    "tags": "Tags",
+    "actions": "Actions",
     "friendly_name": "Friendly Name",
     "type": "Type",
     "location": "Location path / url",
