tasks timezone and fixes

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -123,8 +123,9 @@
     "logs": "Logs",
     "parent_name": "Tasker name",
     "module_name": "Module Name",
-    "load_all_tasks": "Show all tasks, currently showing 1000",
+    "load_all_tasks": "Show all tasks, currently showing max 1000",
     "loading_set_to_false": "Loading set to false",
+    "actions": "Actions",
     "stop": "Stop",
     "clear_tasks_history": "Clear tasks history",
     "taskers": "Taskers",
